phase 2: TS house cleaning 1

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -169,9 +169,9 @@ select {
 }
 
 button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   cursor: pointer;
 }
@@ -191,23 +191,23 @@ input {
   line-height: normal;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
 }
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -256,7 +256,7 @@ th {
   }
 
   abbr[title]::after {
-    content: " (" attr(title) ")";
+    content: ' (' attr(title) ')';
   }
 
   pre,
@@ -342,7 +342,7 @@ body {
   background-color: #fff;
 }
 
-[tabindex="-1"]:focus {
+[tabindex='-1']:focus {
   outline: none !important;
 }
 
@@ -445,14 +445,14 @@ img {
   vertical-align: middle;
 }
 
-[role="button"] {
+[role='button'] {
   cursor: pointer;
 }
 
 a,
 area,
 button,
-[role="button"],
+[role='button'],
 input,
 label,
 select,
@@ -516,7 +516,7 @@ legend {
   line-height: inherit;
 }
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: none;
 }
 
@@ -658,7 +658,7 @@ mark,
 }
 
 .blockquote-footer::before {
-  content: "\2014 \00A0";
+  content: '\2014 \00A0';
 }
 
 .blockquote-reverse {
@@ -670,11 +670,11 @@ mark,
 }
 
 .blockquote-reverse .blockquote-footer::before {
-  content: "";
+  content: '';
 }
 
 .blockquote-reverse .blockquote-footer::after {
-  content: "\00A0 \2014";
+  content: '\00A0 \2014';
 }
 
 .img-fluid,
@@ -2426,36 +2426,36 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 _::-webkit-full-page-media.form-control,
-input[type="date"].form-control,
-input[type="time"].form-control,
-input[type="datetime-local"].form-control,
-input[type="month"].form-control {
+input[type='date'].form-control,
+input[type='time'].form-control,
+input[type='datetime-local'].form-control,
+input[type='month'].form-control {
   line-height: 2.5rem;
 }
 
 _::-webkit-full-page-media.input-sm,
 .input-group-sm _::-webkit-full-page-media.form-control,
-input[type="date"].input-sm,
-.input-group-sm input[type="date"].form-control,
-input[type="time"].input-sm,
-.input-group-sm input[type="time"].form-control,
-input[type="datetime-local"].input-sm,
-.input-group-sm input[type="datetime-local"].form-control,
-input[type="month"].input-sm,
-.input-group-sm input[type="month"].form-control {
+input[type='date'].input-sm,
+.input-group-sm input[type='date'].form-control,
+input[type='time'].input-sm,
+.input-group-sm input[type='time'].form-control,
+input[type='datetime-local'].input-sm,
+.input-group-sm input[type='datetime-local'].form-control,
+input[type='month'].input-sm,
+.input-group-sm input[type='month'].form-control {
   line-height: 1.8125rem;
 }
 
 _::-webkit-full-page-media.input-lg,
 .input-group-lg _::-webkit-full-page-media.form-control,
-input[type="date"].input-lg,
-.input-group-lg input[type="date"].form-control,
-input[type="time"].input-lg,
-.input-group-lg input[type="time"].form-control,
-input[type="datetime-local"].input-lg,
-.input-group-lg input[type="datetime-local"].form-control,
-input[type="month"].input-lg,
-.input-group-lg input[type="month"].form-control {
+input[type='date'].input-lg,
+.input-group-lg input[type='date'].form-control,
+input[type='time'].input-lg,
+.input-group-lg input[type='time'].form-control,
+input[type='datetime-local'].input-lg,
+.input-group-lg input[type='datetime-local'].form-control,
+input[type='month'].input-lg,
+.input-group-lg input[type='month'].form-control {
   line-height: 3.16667rem;
 }
 
@@ -2519,10 +2519,10 @@ input[type="month"].input-lg,
   position: static;
 }
 
-.radio input[type="radio"],
-.radio-inline input[type="radio"],
-.checkbox input[type="checkbox"],
-.checkbox-inline input[type="checkbox"] {
+.radio input[type='radio'],
+.radio-inline input[type='radio'],
+.checkbox input[type='checkbox'],
+.checkbox-inline input[type='checkbox'] {
   position: absolute;
   margin-top: 0.25rem;
   margin-left: -1.25rem;
@@ -2549,10 +2549,10 @@ input[type="month"].input-lg,
   margin-left: 0.75rem;
 }
 
-input[type="radio"]:disabled,
-input[type="radio"].disabled,
-input[type="checkbox"]:disabled,
-input[type="checkbox"].disabled {
+input[type='radio']:disabled,
+input[type='radio'].disabled,
+input[type='checkbox']:disabled,
+input[type='checkbox'].disabled {
   cursor: not-allowed;
 }
 
@@ -2721,8 +2721,8 @@ input[type="checkbox"].disabled {
     padding-left: 0;
   }
 
-  .form-inline .radio input[type="radio"],
-  .form-inline .checkbox input[type="checkbox"] {
+  .form-inline .radio input[type='radio'],
+  .form-inline .checkbox input[type='checkbox'] {
     position: relative;
     margin-left: 0;
   }
@@ -3503,9 +3503,9 @@ fieldset[disabled] a.btn {
   margin-top: 5px;
 }
 
-input[type="submit"].btn-block,
-input[type="reset"].btn-block,
-input[type="button"].btn-block {
+input[type='submit'].btn-block,
+input[type='reset'].btn-block,
+input[type='button'].btn-block {
   width: 100%;
 }
 
@@ -3547,7 +3547,7 @@ input[type="button"].btn-block {
   margin-right: 0.25rem;
   margin-left: 0.25rem;
   vertical-align: middle;
-  content: "";
+  content: '';
   border-top: 0.3em solid;
   border-right: 0.3em solid transparent;
   border-left: 0.3em solid transparent;
@@ -3630,7 +3630,7 @@ input[type="button"].btn-block {
   cursor: not-allowed;
   background-color: transparent;
   background-image: none;
-  filter: "progid:DXImageTransform.Microsoft.gradient(enabled = false)";
+  filter: 'progid:DXImageTransform.Microsoft.gradient(enabled = false)';
 }
 
 .open > .dropdown-menu {
@@ -3670,7 +3670,7 @@ input[type="button"].btn-block {
 
 .dropup .caret,
 .navbar-fixed-bottom .dropdown .caret {
-  content: "";
+  content: '';
   border-top: 0;
   border-bottom: 0.3em solid;
 }
@@ -3721,7 +3721,7 @@ input[type="button"].btn-block {
 }
 
 .btn-toolbar::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -3816,7 +3816,7 @@ input[type="button"].btn-block {
 }
 
 .btn-group-vertical > .btn-group::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -3866,10 +3866,10 @@ input[type="button"].btn-block {
   border-top-left-radius: 0;
 }
 
-[data-toggle="buttons"] > .btn input[type="radio"],
-[data-toggle="buttons"] > .btn input[type="checkbox"],
-[data-toggle="buttons"] > .btn-group > .btn input[type="radio"],
-[data-toggle="buttons"] > .btn-group > .btn input[type="checkbox"] {
+[data-toggle='buttons'] > .btn input[type='radio'],
+[data-toggle='buttons'] > .btn input[type='checkbox'],
+[data-toggle='buttons'] > .btn-group > .btn input[type='radio'],
+[data-toggle='buttons'] > .btn-group > .btn input[type='checkbox'] {
   position: absolute;
   clip: rect(0, 0, 0, 0);
   pointer-events: none;
@@ -3935,8 +3935,8 @@ input[type="button"].btn-block {
   border-radius: 0.3rem;
 }
 
-.input-group-addon input[type="radio"],
-.input-group-addon input[type="checkbox"] {
+.input-group-addon input[type='radio'],
+.input-group-addon input[type='checkbox'] {
   margin-top: 0;
 }
 
@@ -4097,7 +4097,7 @@ input[type="button"].btn-block {
 .custom-controls-stacked .custom-control::after {
   display: block;
   margin-bottom: 0.25rem;
-  content: "";
+  content: '';
 }
 
 .custom-controls-stacked .custom-control + .custom-control {
@@ -4170,7 +4170,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-control:lang(en)::after {
-  content: "Choose file...";
+  content: 'Choose file...';
 }
 
 .custom-file-control::before {
@@ -4190,7 +4190,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-control:lang(en)::before {
-  content: "Browse";
+  content: 'Browse';
 }
 
 .nav {
@@ -4234,7 +4234,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4286,7 +4286,7 @@ input[type="button"].btn-block {
 }
 
 .nav-pills::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4340,7 +4340,7 @@ input[type="button"].btn-block {
 }
 
 .navbar::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4425,7 +4425,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-divider::before {
-  content: "\00a0";
+  content: '\00a0';
 }
 
 .navbar-toggler {
@@ -4566,7 +4566,7 @@ input[type="button"].btn-block {
 }
 
 .card-block::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4609,7 +4609,7 @@ input[type="button"].btn-block {
 }
 
 .card-header::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4625,7 +4625,7 @@ input[type="button"].btn-block {
 }
 
 .card-footer::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4842,7 +4842,7 @@ input[type="button"].btn-block {
 }
 
 .breadcrumb::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -4856,7 +4856,7 @@ input[type="button"].btn-block {
   padding-right: 0.5rem;
   padding-left: 0.5rem;
   color: #818a91;
-  content: "/";
+  content: '/';
 }
 
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -5197,12 +5197,12 @@ a.tag:hover {
   border-top-left-radius: 0.25rem;
 }
 
-.progress[value="100"]::-moz-progress-bar {
+.progress[value='100']::-moz-progress-bar {
   border-bottom-right-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
 
-.progress[value="100"]::-webkit-progress-value {
+.progress[value='100']::-webkit-progress-value {
   border-bottom-right-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
@@ -5233,7 +5233,7 @@ base::-moz-progress-bar,
     border-top-left-radius: 0.25rem;
   }
 
-  .progress[width="100%"] {
+  .progress[width='100%'] {
     border-bottom-right-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
   }
@@ -5800,7 +5800,7 @@ button.close {
 }
 
 .modal-header::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -5826,7 +5826,7 @@ button.close {
 }
 
 .modal-footer::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -6008,7 +6008,7 @@ button.close {
 .popover.bs-tether-element-attached-bottom .popover-arrow::after {
   bottom: 1px;
   margin-left: -10px;
-  content: "";
+  content: '';
   border-top-color: #fff;
   border-bottom-width: 0;
 }
@@ -6031,7 +6031,7 @@ button.close {
 .popover.bs-tether-element-attached-left .popover-arrow::after {
   bottom: -10px;
   left: 1px;
-  content: "";
+  content: '';
   border-right-color: #fff;
   border-left-width: 0;
 }
@@ -6054,7 +6054,7 @@ button.close {
 .popover.bs-tether-element-attached-top .popover-arrow::after {
   top: 1px;
   margin-left: -10px;
-  content: "";
+  content: '';
   border-top-width: 0;
   border-bottom-color: #fff;
 }
@@ -6077,7 +6077,7 @@ button.close {
 .popover.bs-tether-element-attached-right .popover-arrow::after {
   right: 1px;
   bottom: -10px;
-  content: "";
+  content: '';
   border-right-width: 0;
   border-left-color: #fff;
 }
@@ -6110,7 +6110,7 @@ button.close {
 }
 
 .popover-arrow::after {
-  content: "";
+  content: '';
   border-width: 10px;
 }
 
@@ -6267,11 +6267,11 @@ button.close {
 }
 
 .carousel-control .icon-prev::before {
-  content: "\2039";
+  content: '\2039';
 }
 
 .carousel-control .icon-next::before {
-  content: "\203a";
+  content: '\203a';
 }
 
 .carousel-indicators {
@@ -6410,7 +6410,7 @@ a.bg-danger:hover {
 }
 
 .clearfix::after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
 }
@@ -7575,7 +7575,7 @@ footer .attribution {
 }
 
 .article-page .article-content p {
-  font-family: "source serif pro", serif;
+  font-family: 'source serif pro', serif;
   font-size: 1.2rem;
   line-height: 1.8rem;
   margin-bottom: 2rem;
