--- a/src/layout/defaultLayout.css
+++ b/src/layout/defaultLayout.css
@@ -9,9 +9,9 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
-    "header"
-    "main"
-    "footer";
+    'header'
+    'main'
+    'footer';
   overflow: hidden;
 }
 
